fix overflow IOS

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -76,6 +76,13 @@ body {
   .loaded & {
   }
 }
+html {
+  &.lock {
+    overflow: hidden;
+    touch-action: none;
+    overscroll-behavior: none;
+  }
+}
 // Оболонка wrapper ============================================================================================================================================================================================================================================================================================================================================================================================================================================
 .wrapper {
   min-height: 100%;
